Need to fix alignments

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,7 +8,6 @@
   display: flex;
 }
 
-<<<<<<< Updated upstream
 .sort_button, .sort_label, .filter_label, .filter_button {
   margin: 5px;
   border: transparent;
@@ -32,17 +31,31 @@
   border: 2px solid transparent;
 }
 
+.listcard {
+  display: flex;
+}
+
+.listcard_image {
+  width: 20%;
+  height: 90%
+  
+}
+
 .home-wrapper {
   background-color: #2b2b2b;
-  height: 90%;
+  width: 100%;
   white-space: nowrap;
+  height: 100%;
+  display: block;
+}
+#root {
+  height: 100%;
+}
+html, body {
+  margin: 0;
   height: 100%;
 }
 
-html, body, #root {
-  margin: 0;
-  height: 100%;
-=======
 #logo {
   position: absolute;
   font-size: 34px;
@@ -94,5 +107,4 @@ html, body, #root {
   width: 50%;
   font-size: 25px;
   text-align: center;
->>>>>>> Stashed changes
 }
